feature: add authorization

--- a/src/shared/styles/variables.module.scss
+++ b/src/shared/styles/variables.module.scss
@@ -3,6 +3,7 @@ $primary: #282828;
 $main: #161616;
 $white: white;
 $layerIndex: 1;
+$mainIndex: 2;
 
 
 :export {
@@ -11,4 +12,5 @@ $layerIndex: 1;
   main: #161616;
   white: $white;
   layerIndex: 1;
+  mainIndex: 2;
 }
