--- a/src/widgets/MusicWave/MusicWave.module.scss
+++ b/src/widgets/MusicWave/MusicWave.module.scss
@@ -2,12 +2,12 @@
 
 .wrapper {
   width: 100%;
-  height: 320px;
+  height: 180px;
   background-color: #8D1AEF;
   padding: 20px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 15px;
   position: relative;
 
   .layer {
@@ -17,8 +17,47 @@
     background-color: black;
     top: 0;
     left: 0;
-    opacity: 0.3;
+    opacity: 0.6;
     z-index: $layerIndex;
+  }
+
+  .contentWrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    gap: 80px;
+    top: 0;
+    left: 40%;
+    width: 50%;
+    height: 100%;
+    z-index: $mainIndex;
+
+    img {
+      animation: resize 4s infinite alternate;
+    }
+
+    .textWrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      .title {
+        color: $white;
+        font-size: 1.75rem;
+        font-weight: 600;
+        text-align: end;
+        margin: 0;
+      }
+
+      .subtitle {
+        color: $white;
+        font-size: 1rem;
+        font-weight: 400;
+        margin: 0;
+        text-align: end;
+      }
+    }
   }
 
   .row {
@@ -28,5 +67,17 @@
 
   .sideRow {
     padding: 0 60px;
+  }
+}
+
+@keyframes resize {
+  0% {
+    transform: scale(1); 
+  }
+  50% {
+    transform: scale(1.1); 
+  }
+  100% {
+    transform: scale(1); 
   }
 }
