feature: add input and button components

--- a/src/shared/styles/variables.module.scss
+++ b/src/shared/styles/variables.module.scss
@@ -1,6 +1,9 @@
 $purple: #8D1AEF;
+$darkPurple: #7436A7;
 $primary: #282828;
+$secondary: #333333;
 $main: #161616;
+$whiteDark: #B8B8B8;
 $white: white;
 $layerIndex: 1;
 $mainIndex: 2;
@@ -8,8 +11,11 @@ $mainIndex: 2;
 
 :export {
   purple: #8D1AEF;
+  darkPurple: #7436A7;
   primary: #282828;
+  secondary: #333333;
   main: #161616;
+  whiteDark: #B8B8B8;
   white: $white;
   layerIndex: 1;
   mainIndex: 2;
