--- a/src/shared/styles/globals.css
+++ b/src/shared/styles/globals.css
@@ -1,5 +1,5 @@
 @font-face {
-  src: url('../../../public/fonts/SourceSans3-Bold.ttf') format('ttf');
+  src: url('../../../public/fonts/SourceSans3-Bold.ttf') format('truetype');
   font-family: 'Inter';
   font-weight: 600;
   font-style: normal;
@@ -7,24 +7,24 @@
 }
 
 @font-face {
-  src: url('../../../public/fonts/SourceSans3-Light.ttf') format('ttf');
-  font-family: 'Inter';
+  src: url('../../../public/fonts/SourceSans3-Light.ttf') format('truetype');
+  font-family: 'Source Sans 3';
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  src: url('../../../public/fonts/SourceSans3-Regular.ttf') format('ttf');
-  font-family: 'Inter';
+  src: url('../../../public/fonts/SourceSans3-Regular.ttf') format('truetype');
+  font-family: 'Source Sans 3';
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  src: url('../../../public/fonts/SourceSans3-SemiBold.ttf') format('ttf');
-  font-family: 'Inter';
+  src: url('../../../public/fonts/SourceSans3-SemiBold.ttf') format('truetype');
+  font-family: 'Source Sans 3';
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -32,7 +32,7 @@
 
 * {
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Source Sans 3', sans-serif;
 }
 
 body {
