--- a/src/widgets/Header/Header.module.scss
+++ b/src/widgets/Header/Header.module.scss
@@ -5,7 +5,13 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  height: 60px;
+  height: 80px;
   background-color: $primary;
   padding: 0 40px;
+
+  .searchWrapper {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+  }
 }
