--- a/src/shared/UI/Input/Input.module.scss
+++ b/src/shared/UI/Input/Input.module.scss
@@ -1,27 +1,28 @@
-@import 'src/shared/styles/variables.module.scss';
+@import '/src/shared//styles/variables.module.scss';
+
 
 .wrapper {
+  display: flex;
+  align-items: center;
   position: relative;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 2px rgba(105,105,131,0.1);
+  padding: 10px;
 
   .input {
+    width: 100%;
     border: none;
-    border-radius: 32px;
-    padding: 10px 24px;
-    background-color: #333333;
     outline: none;
-    color: $white;
-    width: 500px;
+    font-size: 1rem;
   
     &::placeholder {
-      color: #B8B8B8;
+      color: $whiteSubTitle;
     }
   }
   
-  .adornment {
+  .adornament {
     position: absolute;
-    width: 25px;
-    height: 25px;
-    top: 18%;
-    right: 24px;
+    left: 10px;
+    top: 20%;
   }
 }
