--- a/src/shared/styles/globals.scss
+++ b/src/shared/styles/globals.scss
@@ -1,3 +1,5 @@
+@import '/src/shared//styles/variables.module.scss';
+
 @font-face {
   src: url('../../../public/fonts/SourceSans3-Bold.ttf') format('truetype');
   font-family: 'Inter';
@@ -33,9 +35,21 @@
 * {
   box-sizing: border-box;
   font-family: 'Source Sans 3', sans-serif;
-}
-
-body {
   margin: 0;
   padding: 0;
+  line-height: 1;
+}
+
+.swiper-pagination-bullet {
+  width: 5px !important;
+  height: 5px !important;
+  background-color: $white !important;
+  opacity: 0.7 !important;
+
+  &.swiper-pagination-bullet-active {
+    background-color: $white;
+    border-radius: 5px;
+    height: 15px !important;
+    opacity: 1 !important;
+  }
 }
