--- a/src/widgets/Header/Header.module.scss
+++ b/src/widgets/Header/Header.module.scss
@@ -1,17 +1,60 @@
-@import 'src/shared/styles/variables.module.scss';
+@import '/src/shared//styles/variables.module.scss';
 
 .wrapper {
+  height: 100%;
+  width: 5%;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  height: 80px;
-  background-color: $primary;
-  padding: 0 40px;
+  padding: 70px 0;
 
-  .searchWrapper {
-    display: flex;
-    align-items: center;
-    gap: 40px;
+  .button {
+    padding: 0;
+    color: $whiteSecondary;
+
+    &:hover {
+      color: $white;
+      text-shadow: 0 0 3px $white, 0 0 6px $whiteSecondary;
+    }
   }
+
+  .userImage {
+    border-radius: 50px;
+    overflow: hidden;
+  }
+
+  .mainIcons {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 20px;
+   margin-top: 100%;
+  }
+
+  .button {
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+    }
+
+    &:hover::after {
+      background-color: rgba(255, 255, 255, 0.3);
+      filter: blur(10px); 
+    }
+  }
+
+  .settings {
+    padding: 0;
+    margin-top: auto;
+    margin-bottom: 20px;
+  }
+
 }
