feature: add featured playlists widgets

--- a/src/widgets/MainContent/MainContent.module.scss
+++ b/src/widgets/MainContent/MainContent.module.scss
@@ -75,7 +75,10 @@
         }
       }
 
-      .test2 {
+      .sideContent {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
         width: 30%;
       }
     }
