--- a/src/shared/styles/variables.module.scss
+++ b/src/shared/styles/variables.module.scss
@@ -7,6 +7,7 @@ $primary: #2D2E37;
 $blue: #5569D0;
 $darkBlue: #13324A;
 $darkMain: #121738;
+$hoverColor: #d9dbf6;
 
 :export {
   main: #3A3558;
@@ -18,4 +19,5 @@ $darkMain: #121738;
   blue: #5569D0;
   darkBlue: #13324A;
   darkMain: #121738;
+  hoverColor: #d9dbf6;
 }
