feature: add sidebar

--- a/src/shared/styles/variables.module.scss
+++ b/src/shared/styles/variables.module.scss
@@ -7,7 +7,7 @@ $primary: #2D2E37;
 $blue: #5569D0;
 $darkBlue: #13324A;
 $darkMain: #121738;
-$hoverColor: #d9dbf6;
+$hoverColor: #e5e7f4;
 
 :export {
   main: #3A3558;
