--- a/src/widgets/Player/Player.module.scss
+++ b/src/widgets/Player/Player.module.scss
@@ -85,7 +85,7 @@
     position: absolute;
     width: 90%;
     height: 50px;
-    background-color: $main;
+    background-color: #272642;
     bottom: -50px;
     border-radius: 0 0 25px 25px;
   }
