--- a/src/entities/ItemsSection/ItemsSection.module.scss
+++ b/src/entities/ItemsSection/ItemsSection.module.scss
@@ -1,27 +1,27 @@
 @import '/src/shared//styles/variables.module.scss';
 
-
 .wrapper {
   display: flex;
-  flex-direction: column;
-  gap: 10px;
-  
+  flex-direction: column; 
+
   .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.5rem;
-    font-weight: 500;
-  
+
+    .title {
+      font-size: 1.5rem;
+      font-weight: 500;
+    }
+
     .button {
       font-weight: 400;
       color: $blue;
-    }
+    } 
   }
-  
-  .tracksWrapper {
+
+  .itemsWrapper {
     display: flex;
-    flex-direction: column;
-    gap: 5px;
+    gap: 14px;
   }
 }
