--- a/src/entities/TrackShort/TrackShort.module.scss
+++ b/src/entities/TrackShort/TrackShort.module.scss
@@ -8,20 +8,10 @@
   width: 100%;
   border-radius: 25px;
   overflow: hidden;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: -100%; 
-    width: 100%;
-    height: 100%;
-    background-color: $hoverColor;
-    transition: left 0.2s ease; 
-  }
+  transition: background-color 0.2s ease; 
   
-  &:hover::before {
-    left: 0; 
+  &:hover {
+    background-color: $hoverColor;
   }
 
   &:hover .trackWrapper .imageWrapper .play {
