--- a/src/widgets/RecommendedPlaylistst/RecommendedPlaylists.module.scss
+++ b/src/widgets/RecommendedPlaylistst/RecommendedPlaylists.module.scss
@@ -5,22 +5,30 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  max-height: 430px;
-  overflow: hidden;
+  height: 400px;
+  overflow-y: scroll;
+  padding-right: 10px;
 
-  &::after {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    box-shadow: inset 16px -45px 32px -30px white;
-    z-index: 5;
+  &::-webkit-scrollbar {
+    width: 0px;
+    background-color: $white;
   }
 
-  .title {
-    font-size: 1.5rem;
-    font-weight: 500;
+  .header {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
+
+    .title {
+      font-size: 1.5rem;
+      font-weight: 500;
+      align-items: center;
+    }
+
+    .button {
+      font-weight: 400;
+      color: $blue;
+    }
   }
 
   .playlists {
