--- a/src/entities/TrackShort/TrackShort.module.scss
+++ b/src/entities/TrackShort/TrackShort.module.scss
@@ -18,14 +18,24 @@
     opacity: 1;
   }
 
-  .button {
-    font-size: 1.5rem;
-    font-weight: 500;
-    transition: 0s;
-    height: fit-content;
-    padding-right: 15px;
-    margin-bottom: 10px;
-    z-index: 1;
+  .end {
+    display: flex;
+    align-items: center;
+    gap: 50px;
+
+    .duration {
+      color: $whiteSecondary;
+    }
+
+    .button {
+      font-size: 1.5rem;
+      font-weight: 500;
+      transition: 0s;
+      height: fit-content;
+      padding-right: 15px !important;
+      margin-bottom: 10px;
+      z-index: 1;
+    }
   }
 
   .trackWrapper {
@@ -33,6 +43,10 @@
     align-items: center;
     gap: 10px;
     padding: 10px 15px;
+
+    .index {
+      color: $whiteSecondary;
+    }
 
     .imageWrapper {
       position: relative;
